add main org endps
