# resources/api_default.go
@@ -27,7 +27,7 @@ type ApiTestRequest struct {
 	ApiService *DefaultAPIService
 }
 
-func (r ApiTestRequest) Execute() (*http.Response, error) {
+func (r ApiTestRequest) Execute() (*Employee, *http.Response, error) {
 	return r.ApiService.TestExecute(r)
 }
 
@@ -45,16 +45,18 @@ func (a *DefaultAPIService) Test(ctx context.Context) ApiTestRequest {
 }
 
 // Execute executes the request
-func (a *DefaultAPIService) TestExecute(r ApiTestRequest) (*http.Response, error) {
+//  @return Employee
+func (a *DefaultAPIService) TestExecute(r ApiTestRequest) (*Employee, *http.Response, error) {
 	var (
 		localVarHTTPMethod   = http.MethodPost
 		localVarPostBody     interface{}
 		formFiles            []formFile
+		localVarReturnValue  *Employee
 	)
 
 	localBasePath, err := a.client.cfg.ServerURLWithContext(r.ctx, "DefaultAPIService.Test")
 	if err != nil {
-		return nil, &GenericOpenAPIError{error: err.Error()}
+		return localVarReturnValue, nil, &GenericOpenAPIError{error: err.Error()}
 	}
 
 	localVarPath := localBasePath + "/test"
@@ -73,7 +75,7 @@ func (a *DefaultAPIService) TestExecute(r ApiTestRequest) (*http.Response, error
 	}
 
 	// to determine the Accept header
-	localVarHTTPHeaderAccepts := []string{}
+	localVarHTTPHeaderAccepts := []string{"application/json"}
 
 	// set Accept header
 	localVarHTTPHeaderAccept := selectHeaderAccept(localVarHTTPHeaderAccepts)
@@ -82,19 +84,19 @@ func (a *DefaultAPIService) TestExecute(r ApiTestRequest) (*http.Response, error
 	}
 	req, err := a.client.prepareRequest(r.ctx, localVarPath, localVarHTTPMethod, localVarPostBody, localVarHeaderParams, localVarQueryParams, localVarFormParams, formFiles)
 	if err != nil {
-		return nil, err
+		return localVarReturnValue, nil, err
 	}
 
 	localVarHTTPResponse, err := a.client.callAPI(req)
 	if err != nil || localVarHTTPResponse == nil {
-		return localVarHTTPResponse, err
+		return localVarReturnValue, localVarHTTPResponse, err
 	}
 
 	localVarBody, err := io.ReadAll(localVarHTTPResponse.Body)
 	localVarHTTPResponse.Body.Close()
 	localVarHTTPResponse.Body = io.NopCloser(bytes.NewBuffer(localVarBody))
 	if err != nil {
-		return localVarHTTPResponse, err
+		return localVarReturnValue, localVarHTTPResponse, err
 	}
 
 	if localVarHTTPResponse.StatusCode >= 300 {
@@ -102,8 +104,17 @@ func (a *DefaultAPIService) TestExecute(r ApiTestRequest) (*http.Response, error
 			body:  localVarBody,
 			error: localVarHTTPResponse.Status,
 		}
-		return localVarHTTPResponse, newErr
+		return localVarReturnValue, localVarHTTPResponse, newErr
 	}
 
-	return localVarHTTPResponse, nil
+	err = a.client.decode(&localVarReturnValue, localVarBody, localVarHTTPResponse.Header.Get("Content-Type"))
+	if err != nil {
+		newErr := &GenericOpenAPIError{
+			body:  localVarBody,
+			error: err.Error(),
+		}
+		return localVarReturnValue, localVarHTTPResponse, newErr
+	}
+
+	return localVarReturnValue, localVarHTTPResponse, nil
 }
