# resources/resources_types.go
@@ -5,7 +5,8 @@ const (
 	EmployeeCreateType = "employee_create"
 	EmployeeUpdateType = "employee_update"
 
-	OrganizationType       = "organization"
-	OrganizationCreateType = "organization_create"
-	OrganizationUpdateType = "organization_update"
+	OrganizationType            = "organization"
+	OrganizationCreateType      = "organization_create"
+	OrganizationUpdateType      = "organization_update"
+	OrganizationLinksUpdateType = "organization_links_update"
 )
